сделал див в диве, перевел на флексы

--- a/2.css
+++ b/2.css
@@ -2,16 +2,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.div { 
+    display: flex;  
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
-.div1 { display: inline; }
-
-a {
-    display: inline-block;
-    margin-top: 40px;
-  }
-
-
-b {
-    display: inline-block;
-    margin-top: 20px;
+.div1 {
+    display: flex;
+    margin: 10px;
+    margin-inline-start: 20px;
+    margin-inline-end: 20px;
 }
